[package]
name = "fzk"
version = "0.0.3"
authors = ["Caleb Kornegay <caleb.kornegay@gmail.com>"]
edition = "2021"
description = "Fuzzy killer for processes"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
ratatui = "0.29.0"
rust-fuzzy-search = "0.1.1"
scopeguard = "1.2.0"
